force-app/main/default/objects/VRT_Rental__c/fields/VRT_CHK_Penalty__c.field-meta.xml
<CustomField>
    <fullName>VRT_CHK_Penalty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Muestra si el cliente tuvo una penalización por este alquiler.</description>
    <label>Tiene Penalización</label>
    <type>Checkbox</type>
</CustomField>