force-app/main/default/objects/VRT_Rental__c/fields/VRT_DAT_ReturnDate__c.field-meta.xml
<CustomField>
    <fullName>VRT_DAT_ReturnDate__c</fullName>
    <description>Fecha final en la que se realizó la devolución del vehículo.</description>
    <label>Fecha Devolución Vehículo</label>
    <type>Date</type>
</CustomField>