force-app/main/default/objects/VRT_Rental__c/fields/VRT_SEL_PaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>VRT_SEL_PaymentStatus__c</fullName>
    <description>Este campo de lista de selección indicará el estado de pago del alquiler.</description>
    <label>Estado de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pagado</fullName>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Atrasado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>