force-app/main/default/objects/VRT_Rental__c/fields/VRT_TXT_Cost_Info__c.field-meta.xml
<CustomField>
    <fullName>VRT_TXT_Cost_Info__c</fullName>
    <label>Desglose Coste</label>
    <type>TextArea</type>
</CustomField>