force-app/main/default/objects/VRT_Rental__c/fields/VRT_TXT_RejectionReason_c__c.field-meta.xml
<CustomField>
    <fullName>VRT_TXT_RejectionReason_c__c</fullName>
    <description>This field shows the reason why the rental application was rejected in the approval process.</description>
    <label>Rejection Reason</label>
    <type>TextArea</type>
</CustomField>