force-app/main/default/objects/VRT_Rental__c/validationRules/VRT_CosteNegativo_ValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>VRT_CosteNegativo_ValidationRule</fullName>
    <active>true</active>
    <description>Esta regla garantiza que el coste total no puede ser negativo.</description>
    <errorConditionFormula>VRT_DIV_TotalCost__c &lt; 0</errorConditionFormula>
    <errorMessage>El coste total no puede ser negativo.</errorMessage>
</ValidationRule>