force-app/main/default/objects/VRT_Rental__c/validationRules/VRT_FechaFinal_ValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>VRT_FechaFinal_ValidationRule</fullName>
    <active>true</active>
    <description>Esta regla de validación asegura que la fecha de fin del alquiler debe ser mayor o igual a la fecha de inicio del alquiler.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(VRT_DAT_InitialDate__c)),
NOT(ISBLANK(VRT_DAT_FinalDate__c)),
VRT_DAT_FinalDate__c &lt; VRT_DAT_InitialDate__c
)</errorConditionFormula>
    <errorMessage>La fecha de fin del alquiler debe ser mayor o igual a la fecha de inicio del alquiler.</errorMessage>
</ValidationRule>