force-app/main/default/objects/VRT_Rental__c/validationRules/VRT_FechaInicio_ValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>VRT_FechaInicio_ValidationRule</fullName>
    <active>true</active>
    <description>Esta regla comprueba que la fecha de inicio del alquiler debe ser menor o igual a la fecha de fin del alquiler.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(VRT_DAT_InitialDate__c)),
NOT(ISBLANK(VRT_DAT_FinalDate__c)),
VRT_DAT_InitialDate__c &gt; VRT_DAT_FinalDate__c
)</errorConditionFormula>
    <errorMessage>La fecha de inicio del alquiler debe ser menor o igual a la fecha de fin del alquiler</errorMessage>
</ValidationRule>