force-app/main/default/objects/VRT_Rental__c/validationRules/VRT_ReservaValida_ValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>VRT_ReservaValida_ValidationRule</fullName>
    <active>true</active>
    <description>Esta regla asegura que no se hagan reservas sin pagar que se cancelen a última hora, de manera que para considerar una reserva como válida, esta deberá ser pagada por adelantado.</description>
    <errorConditionFormula>AND(
 ISPICKVAL( VRT_SEL_Status__c , &quot;Reservado&quot;),
 NOT(ISPICKVAL( VRT_SEL_PaymentStatus__c , &quot;Pagado&quot;))
)</errorConditionFormula>
    <errorMessage>Si no se adelanta el pago, no se puede considerar un alquiler como reservado.</errorMessage>
</ValidationRule>