force-app/main/default/objects/VRT_Rental__c/validationRules/VRT_VehiculoDispAlquiler_ValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>VRT_VehiculoDispAlquiler_ValidationRule</fullName>
    <active>true</active>
    <description>Garantizar que un vehículo esté disponible para alquiler en el momento. Es decir, si el vehículo está siendo usado por otro alquiler, está en mantenimiento o fuera de servicio no podrá ser seleccionado.</description>
    <errorConditionFormula>NOT( ISPICKVAL(  VRT_LKP_Vehicle__r.VRT_SEL_Status__c , &quot;Listo&quot;) )</errorConditionFormula>
    <errorMessage>El vehículo no está disponible para alquiler en este momento.</errorMessage>
</ValidationRule>