force-app/main/default/objects/VRT_Rental__c/listViews/VRT_ActiveRentals_List.listView-meta.xml
<ListView>
    <fullName>VRT_ActiveRentals_List</fullName>
    <columns>NAME</columns>
    <columns>VRT_DAT_InitialDate__c</columns>
    <columns>VRT_DAT_FinalDate__c</columns>
    <columns>VRT_FOR_Duration__c</columns>
    <columns>VRT_LKP_Account__c</columns>
    <columns>VRT_LKP_Vehicle__c</columns>
    <columns>VRT_SEL_PaymentStatus__c</columns>
    <columns>VRT_DIV_TotalCost__c</columns>
    <columns>VRT_TXT_Notes__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>VRT_SEL_Status__c</field>
        <operation>equals</operation>
        <value>En curso</value>
    </filters>
    <label>Alquileres Activos</label>
</ListView>